Add styling and sized headers and boxes

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
 body {
   font-family: 'Source Serif Pro', serif, 'Times New Roman', Times, serif; 
-  text-align: center;
+  background-color: #c079f7;
 }
